--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,9 +41,10 @@ test_script:
         Write-Host "Import the test wrapper for AzurePSDrive"
         Import-Module c:\projects\azurepsdrive\tests\test.psm1 -Force -Verbose
         Initialize-TestEnvironment
+        Login-AzureRM
 
         Write-Host "Install SHiPS module from PowerShellGallery - required dependency for AzurePSDrive"
-        Install-Module -Name SHiPS -Force -Verbose -AllowClobber
+        Install-Module -Name SHiPS -Verbose
 
         Write-Host "Import AzurePSDrive module to current session"
         Import-Module c:\projects\azurepsdrive\azurepsdrive.psd1 -Force -Verbose
